# momo

./: CMakeLists.txt  config.yaml  main.cpp  yolov5.cpp  yolov5.hpp
src/: ros2_test.cpp
tasks/: armor.cpp  armor.hpp  auto_aim  classifier.cpp  classifier.hpp  detector.cpp  detector.hpp  yolo.cpp
tools/: img_tools.cpp  img_tools.hpp  logger.cpp  logger.hpp
